<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_roome_logo" />


    <EditText
        android:id="@+id/et_first_name_without_google"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_et_back"
        android:ems="10"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:ellipsize="none"
...
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_roome_logo" />

    <EditText
        android:id="@+id/et_last_name_without_google"
        android:layout_marginTop="24dp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_et_back"
        android:ellipsize="none"
        android:fontFamily="sans-serif"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/or_sign_in_with_google"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_without_google" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
...
