...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:shadowColor="#40000000"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@android:string/ok"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ok_dialog"
        app:layout_constraintStart_toStartOf="@+id/btn_ok_dialog"
        app:layout_constraintTop_toTopOf="@+id/btn_ok_dialog" />

...
